--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студия</title>
+    <title>Студія</title>
 
 </head>
 <body>
     <header>
-        <a href="/"><span>Web</span>Studio</a>
         <nav>
+            <a href="/"><span>Web</span>Studio</a>
             <ul>
                 <li><a href="#Студия">Студия</a></li>
                 <li><a href="#Портфолио">Портфолио</a></li>
@@ -21,8 +21,13 @@
         <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <!--Section HERO-->
+        <div>
+            <section>
+                <h1>Ефективні рішення для <br/>вашого бізнесу</h1>
+                <button type="button">Замовити послугу</button>
+            </section>
+        </div>
         <!--Section особенности-->
         <section>
             <h2 hidden>Особенности</h2>
